--- a/styles/main.css
+++ b/styles/main.css
@@ -41,7 +41,8 @@ body {
   animation: transitionLoad 0.75s;
 } */
 
-.card {
+.hidden {
+  opacity: 0;
   background-color: #fff;
   border: solid 1px rgb(59, 59, 59);
   border-radius: 8px;
@@ -50,11 +51,24 @@ body {
   margin: 20px auto;
   width: 95vw;
   overflow: hidden;
-  /* transition: transform 0.3s ease; */
-  opacity: 1;
+  transition: all 1s;
 }
 
-.card:hover {
+.show {
+  opacity: 1;
+  background-color: #fff;
+  border: solid 1px rgb(59, 59, 59);
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  padding: 0px;
+  margin: 20px auto;
+  width: 95vw;
+  overflow: hidden;
+  transition: transform 0.3s ease;
+  transition: all 1s;
+}
+
+.show:hover {
   transform: scale(1.05);
 }
 
@@ -106,31 +120,6 @@ body {
 
 .photo-container img {
   width: 100%;
-}
-
-.hidden {
-  opacity: 0;
-  background-color: #fff;
-  border: solid 1px rgb(59, 59, 59);
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-  padding: 0px;
-  margin: 20px auto;
-  width: 95vw;
-  overflow: hidden;
-  transition: all 1s;
-}
-
-.show {
-  opacity: 1;
-  background-color: #fff;
-  border: solid 1px rgb(59, 59, 59);
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-  padding: 0px;
-  margin: 20px auto;
-  width: 95vw;
-  overflow: hidden;
 }
 
 @keyframes transitionLoad {
